--- a/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Main/MainFrame.form
+++ b/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Main/MainFrame.form
@@ -42,7 +42,7 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <Component id="menu2" pref="143" max="32767" attributes="0"/>
+                  <Component id="menu2" min="-2" pref="143" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                   <Component id="jPanel1" max="32767" attributes="0"/>
                   <EmptySpace min="-2" max="-2" attributes="0"/>
