--- a/Smartphone-sales-manager/src/Smartphone_sales_management/UI/form/Menu.form
+++ b/Smartphone-sales-manager/src/Smartphone_sales_management/UI/form/Menu.form
@@ -69,6 +69,9 @@
     </Container>
     <Component class="Smartphone_sales_management.UI.Swing.Menu.ListMenu" name="listMenu1">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="66" green="33" red="ff" type="rgb"/>
+        </Property>
         <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
           <StringArray count="0"/>
         </Property>
